# SimTool2

./: CMakeLists.txt  README.md
SimTool2/: CMakeLists.txt
SimTool2/core/: CMakeLists.txt
SimTool2/core/src/: SimDataLogger.cpp  SimDataSeries.cpp
SimTool2/examples/: CMakeLists.txt
SimTool2/gui/: CMakeLists.txt
SimTool2/gui/forms/: wplotwindow.ui
SimTool2/gui/include/: wmainwindow.h
SimTool2/plot/: CMakeLists.txt
SimTool2/tests/: CMakeLists.txt
